Correction sur les icônes alignées à gauche
FossilOrigin-Name: 7602ccbe89ccf3046c66a4e9f9a0f41dccc01c14

--- a/src/www/admin/static/admin.css
+++ b/src/www/admin/static/admin.css
@@ -696,7 +696,6 @@ b.money {
     right: 0;
     z-index: -1;
     padding: .3em .4em;
-    padding-right: 2em;
     background: #ff9;
     text-shadow: none;
     white-space: pre;
@@ -704,10 +703,14 @@ b.money {
     text-decoration: underline;
 }
 
+table .actions .icn[title]:after {
+    padding-right: 2em;
+}
+
 dl dd.actions .icn[title]:after {
-    left: 2.2em;
     right: auto;
-    z-index: 100000;
+    left: 0;
+    padding-left: 2em;
 }
 
 .icn[title]:hover:after {
